<resources>
    <string name="app_name">PokerApp</string>

    <!-- configure screen -->
    <string name="add_player_button">Add player</string>
    <string name="start_game">Start game</string>
    <string name="default_player_name">player %d</string>

    <!-- dialog set player -->
    <string name="button_cancel">Cancel</string>
    <string name="button_apply">Apply</string>
    <string name="hint_edit_text">Username</string>
    <string name="empty_name_error_message">Enter a name</string>
    <string name="unpicked_color_error_message">Pick a color</string>
    <string name="max_length_error_message">The name is too long (8 characters maximum)</string>
    <string name="avatar_description">Player\'s avatar</string>
    <string name="deleting_cross_description">The cross that removes the player</string>

    <!-- game screen -->
    <string name="pot_title">Pot</string>
    <string name="button_call">Call</string>
    <string name="button_raise">Raise</string>
    <string name="button_fold">Fold</string>
    <string name="button_check">Check</string>
    <string name="player_stack">Stack:</string>
    <string name="player_bet">Bet:</string>
    <string name="player_big_blind">BB</string>
    <string name="player_small_blind">SB</string>

</resources>